tests/baselines/reference/parameterPropertyInConstructor2.errors.txt
==== tests/cases/compiler/parameterPropertyInConstructor2.ts (3 errors) ====
    module mod {
      class Customers {
        constructor(public names: string);
                    ~~~~~~
!!! parameterPropertyInConstructor2.ts(3,17): error TS1040: A parameter property is only allowed in a constructor implementation.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! parameterPropertyInConstructor2.ts(3,5): error TS2149: Overload signature is not compatible with function definition:
!!! 	Call signature expects 1 or fewer parameters.
        constructor(public names: string, public ages: number) {
                           ~~~~~
!!! parameterPropertyInConstructor2.ts(4,24): error TS2000: Duplicate identifier 'names'.
        }
      }
    }
    